--- a/ProjectDiamondShop/ProjectDiamondShop.csproj
+++ b/ProjectDiamondShop/ProjectDiamondShop.csproj
@@ -433,6 +433,7 @@
     <Content Include="Views\ViewProfile\EditProfile.cshtml" />
     <Content Include="Views\ForgotPassword\ForgotPassword.cshtml" />
     <Content Include="Views\ForgotPassword\EnterResetCode.cshtml" />
+    <Content Include="Views\Diamonds\AddDiamond.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
