--- a/ProjectDiamondShop/Web.config
+++ b/ProjectDiamondShop/Web.config
@@ -27,9 +27,9 @@
 		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
 		<add key="smtp:host" value="smtp.gmail.com" />
 		<add key="smtp:port" value="587" />
-		<add key="smtp:username" value="thediamondshop391@gmail.com" />
-		<add key="smtp:password" value="ccqyvkoecdrjwxnk" />
-		<add key="smtp:from" value="thediamondshop391@gmail.com" />
+		<add key="smtp:username" value="huyh69185@gmail.com" />
+		<add key="smtp:password" value="eypgyitumcbgiqrk" />
+		<add key="smtp:from" value="huyh69185@gmail.com" />
 	</appSettings>
 	<connectionStrings>
 		<!--<add name="DiamondShopManagementEntities" connectionString="metadata=res://*/DiamondShopModels.csdl|res://*/DiamondShopModels.ssdl|res://*/DiamondShopModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=HUY\HUY;initial catalog=DiamondShopManagement;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
