--- a/DiamondShopDAOs/DiamondShopDAOs.csproj
+++ b/DiamondShopDAOs/DiamondShopDAOs.csproj
@@ -181,6 +181,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CookieCartDAO\ItemCartDAOSimple.cs" />
     <Compile Include="DAOs\AccentStoneDAO.cs" />
     <Compile Include="CookieCartDAO\CartDao.cs" />
     <Compile Include="CookieCartDAO\ItemCartDAO.cs" />
